--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
       <section id="main_content">
-        <p>Teste</p>
+        <p>Teste - André Valle</p>
       </section>
 
       <footer>
