--- a/pernoite/12.html
+++ b/pernoite/12.html
@@ -13,7 +13,7 @@
 
 
 
-<!--total--><div id="total" class="doze"></div><!--total-->
+<!--total--><div id="total" class="quatorze"></div><!--total-->
 
 
 
