--- a/pernoite/13.html
+++ b/pernoite/13.html
@@ -13,7 +13,7 @@
 
 
 
-<!--total--><div id="total" class="treze"></div><!--total-->
+<!--total--><div id="total" class="quinze"></div><!--total-->
 
 
 
