--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 </head>
 
+<script type="text/javascript">
+<!--
+window.location = "http://br.linkedin.com/in/bielvalle"
+//-->
+</script>
+
 <body>
 
 
