--- a/projetos/jardim/roteiro/index.html
+++ b/projetos/jardim/roteiro/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Pernoite.com</title>
+<title>Jardim Praia da Beira Mar</title>
 <meta name="Keywords" content="" /> 
 <meta name="Description" content="" /> 
 <link href="css/style.css" rel="stylesheet" type="text/css" />
