--- a/projetos/helifreireg/index.html
+++ b/projetos/helifreireg/index.html
@@ -2,38 +2,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Gabriel Vitor Valle</title>
+<title>Heli Freireg.com</title>
 <meta name="Keywords" content="Gabriel Vitor Valle - Designer e Front End Developer" /> 
 <meta name="Description" content="Gabriel Vitor Valle - Designer e Front End Developer" /> 
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
-<script type="text/javascript">
-<!--
-window.location = "http://br.linkedin.com/in/bielvalle"
-//-->
-</script>
 
 <body>
 
 
 
-<!--total--><div id="total">
+<!--total--><div id="total1">
+	
 </div><!--total-->
 
 
 
 
 </body>
-
-<script>
-	$(document).ready(function () {
-    // Handler for .ready() called.
-    window.setTimeout(function () {
-        location.href = "https://www.linkedin.com/in/bielvalle/";
-    }, 1000);
-});
-</script>
-
 </html>
