Layout Heli Finalizado

--- a/projetos/helifreireg/index.html
+++ b/projetos/helifreireg/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Heli Freireg.com</title>
-<meta name="Keywords" content="Gabriel Vitor Valle - Designer e Front End Developer" /> 
-<meta name="Description" content="Gabriel Vitor Valle - Designer e Front End Developer" /> 
+<meta name="Keywords" content="Heli Freireg.com - Pintora, Escultora e Gravadora." /> 
+<meta name="Description" content="Site Oficial da Artista Plástica, Pintora, Escultora e Gravadora, Heli Freireg." /> 
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
@@ -14,7 +14,7 @@
 
 
 
-<!--total--><div id="total1">
+<!--total--><div id="total3">
 	
 </div><!--total-->
 
