--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript">
 <!--
-window.location = "http://br.linkedin.com/in/bielvalle"
+window.location = "https://www.behance.net/bielvalle"
 //-->
 </script>
 
@@ -31,7 +31,7 @@ window.location = "http://br.linkedin.com/in/bielvalle"
 	$(document).ready(function () {
     // Handler for .ready() called.
     window.setTimeout(function () {
-        location.href = "https://www.linkedin.com/in/bielvalle/";
+        location.href = "https://www.behance.net/bielvalle";
     }, 1000);
 });
 </script>
